--- a/stl/stl.vcxproj.filters
+++ b/stl/stl.vcxproj.filters
@@ -11,8 +11,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="2178_boj.cpp">
+      <Filter>리소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
