--- a/stl/stl.vcxproj
+++ b/stl/stl.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="2566_boj.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F229AA4B-CCE2-4EC4-BBF2-227978DABCA4}</ProjectGuid>
