알고리즘 수학

--- a/stl/stl.vcxproj
+++ b/stl/stl.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="codeforce_div2_A.cpp" />
+    <ClCompile Include="9613_boj(gcd).cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
