--- a/stl/stl.vcxproj.filters
+++ b/stl/stl.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="codeforce_div2_A.cpp">
+    <ClCompile Include="9613_boj(gcd).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
