--- a/stl/stl.vcxproj.filters
+++ b/stl/stl.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="baekman.cpp">
+    <ClCompile Include="11726_boj(dp문제타일).cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
